// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichItem component renders danger tag when specified with theme prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 5px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 5px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 5px;
}

.c1 {
  width: 24px;
  height: 100%;
  margin-right: 20px;
}

.c3 {
  padding-top: 4px;
}

.c5 {
  padding-top: 4px;
  color: #828282;
  padding-top: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: hsl(0,0%,100%);
  background: var(--button-dark-bg);
  border: 0;
  border-radius: 20px;
  display: inline-block;
  padding: 5px 10px;
  margin: 0 2.5px 5px;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-transform: lowercase;
  font-family: monospace;
  background-color: #d56969;
  color: #fff;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img />
    </div>
    <div
      class="sc-AxjAm c2"
    >
      <div
        class="c0"
      >
        <h5
          class="c3"
        />
        <div
          class="sc-Axmtr c4"
        >
          Declined
        </div>
      </div>
      <h5
        class="c5"
      />
    </div>
    <div
      class="c6"
    />
  </div>
</div>
`;

exports[`RichItem component renders primary tag when specified with theme prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 5px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 5px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 5px;
}

.c1 {
  width: 24px;
  height: 100%;
  margin-right: 20px;
}

.c3 {
  padding-top: 4px;
}

.c5 {
  padding-top: 4px;
  color: #828282;
  padding-top: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: hsl(0,0%,100%);
  background: var(--button-dark-bg);
  border: 0;
  border-radius: 20px;
  display: inline-block;
  padding: 5px 10px;
  margin: 0 2.5px 5px;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-transform: lowercase;
  font-family: monospace;
  background-color: #69d5b1;
  color: #fff;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img />
    </div>
    <div
      class="sc-AxjAm c2"
    >
      <div
        class="c0"
      >
        <h5
          class="c3"
        />
        <div
          class="sc-Axmtr c4"
        >
          Accepted
        </div>
      </div>
      <h5
        class="c5"
      />
    </div>
    <div
      class="c6"
    />
  </div>
</div>
`;

exports[`RichItem component renders secondary tag when specified with theme prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 5px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 5px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 5px;
}

.c1 {
  width: 24px;
  height: 100%;
  margin-right: 20px;
}

.c3 {
  padding-top: 4px;
}

.c5 {
  padding-top: 4px;
  color: #828282;
  padding-top: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: hsl(0,0%,100%);
  background: var(--button-dark-bg);
  border: 0;
  border-radius: 20px;
  display: inline-block;
  padding: 5px 10px;
  margin: 0 2.5px 5px;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-transform: lowercase;
  font-family: monospace;
  background-color: #fff;
  border: 2px solid;
  color: #69d5b1;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img />
    </div>
    <div
      class="sc-AxjAm c2"
    >
      <div
        class="c0"
      >
        <h5
          class="c3"
        />
        <div
          class="sc-Axmtr c4"
        >
          Pending
        </div>
      </div>
      <h5
        class="c5"
      />
    </div>
    <div
      class="c6"
    />
  </div>
</div>
`;
